Fixed particlejs not showing issues by linking the particle.js file properly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
 body {
   font-family: 'Noto Serif SC', serif;
   color: #ffffff;
-  background-color: #F7F8FB;
+  /* background-color: #F7F8FB; */
   overflow-x: hidden;
 }
 
@@ -305,8 +305,8 @@ main[role='dashboard'] {
 main[role='dashboard'] .container {
   width: 1200px;
   height: 900px;
-  top: 190px;
-  padding: 0 2em;
+  top: 180px;
+  padding: 1em 2em;
   line-height: 1.6;
   color: #333;
   z-index: 800;
@@ -325,7 +325,7 @@ main[role='dashboard'] .verification-container {
 
 main[role='dashboard'] .verification-container form {
   width: 100%;
-  margin-top: 20px;
+  margin: 20px auto;
   height: 45px;
   padding: 0;
   display: flex;
